--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,11 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 8px 8px 8px 8px;
+    padding: 16px;
+}
+
+.repo-detail-content-div > .name{
+    font-size: 20px;
 }
 
 .user-detail-many-content-div {
@@ -72,6 +76,7 @@
     font-size: 16px;
     color: rgba(0, 0, 0, .8);
     background: rgba(0, 0, 0, .03);
+    padding: 12px;
 }
 
 .about-text-div {
