--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+.repo-order-div{
+    display: flex;
+    align-items: center;
+}
+
+.repo-card-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+.repo-details-div{
+    display: flex;
+}
+
 .user-detail-div,
 .repo-detail-div {
     border: 1px solid rgba(0, 0, 0, .15);
@@ -24,7 +39,7 @@
     padding: 16px;
 }
 
-.repo-detail-content-div > .name{
+.repo-detail-content-div>.name {
     font-size: 20px;
 }
 
@@ -104,34 +119,34 @@
     text-align: center;
 }
 
-.repo-lang-star{
+.repo-lang-star {
     display: flex;
 }
 
-.label-with-count{
+.label-with-count {
     display: flex;
-    border: 1px solid rgba(27,31,35,.2);
+    border: 1px solid rgba(27, 31, 35, .2);
     border-radius: 4px;
     font-size: 12px;
     align-items: center;
 }
 
-.label-prepend{
+.label-prepend {
     display: flex;
     align-items: center;
     background-color: #eff3f6;
-    background-image: linear-gradient(-180deg,#fafbfc,#eff3f6 90%);
+    background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
     color: #24292e;
     font-weight: 600;
     padding: 3px 10px;
-    border-right: 1px solid rgba(27,31,35,.2);
+    border-right: 1px solid rgba(27, 31, 35, .2);
 }
 
-.count{
+.count {
     padding: 3px 10px;
 }
 
-.language-badge{
+.language-badge {
     display: flex;
     align-items: center;
 }
